# laura-lattices

./: MANIFEST.in  README.md  pyproject.toml
JFEL/: __init__.py  layouts.yaml  pyproject.toml  sections.yaml
JFEL/Data_Files/: mockup2m_moved.txt
JFEL/Generators/: jfel.yaml
JFEL/Lattices/: jfel_combined.def
JFEL/YAML/: summary.yaml  summary_old.yaml
JFEL/YAML/Diagnostic/Beam_Arrival_Monitor/: JFEL-S05-DIA-BAM-01.yaml  JFEL-S06-DIA-BAM-01.yaml  JFEL-S06-DIA-EOM-01.yaml
JFEL/YAML/Diagnostic/Beam_Position_Monitor/: JFEL-S01-DIA-BPM-01.yaml  JFEL-S02-DIA-BPM-01.yaml  JFEL-S02-DIA-BPM-02.yaml  JFEL-S03-DIA-BPM-01.yaml  JFEL-S04-DIA-BPM-01.yaml  JFEL-S04-DIA-BPM-02.yaml  JFEL-S04-DIA-BPM-03.yaml  JFEL-S04-DIA-BPM-04.yaml  JFEL-S04-DIA-BPM-05.yaml  JFEL-S04-DIA-BPM-06.yaml  JFEL-S05-DIA-BPM-01.yaml  JFEL-S05-DIA-BPM-02.yaml  JFEL-S06-DIA-BPM-01.yaml  JFEL-S06-DIA-BPM-02.yaml  JFEL-S07-DIA-BPM-01.yaml  JFEL-S07-DIA-BPM-02.yaml  JFEL-S07-DIA-BPM-03.yaml  JFEL-S07-DIA-BPM-04.yaml  JFEL-S07-DIA-BPM-05.yaml  JFEL-S07-DIA-BPM-06.yaml  JFEL-S07-DIA-BPM-07.yaml  JFEL-S07-DIA-BPM-08.yaml  JFEL-S08-DIA-BPM-01.yaml  JFEL-S08-DIA-BPM-02.yaml  JFEL-S09-DIA-BPM-01.yaml  JFEL-S09-DIA-BPM-02.yaml  JFEL-S10-DIA-BPM-01.yaml  JFEL-S10-DIA-BPM-02.yaml  JFEL-S11-DIA-BPM-01.yaml  JFEL-S11-DIA-BPM-02.yaml  JFEL-S12-DIA-BPM-01.yaml  JFEL-S12-DIA-BPM-02.yaml  JFEL-SP1-DIA-BPM-01.yaml  JFEL-SP2-DIA-BPM-01.yaml  JFEL-SP2-DIA-BPM-02.yaml  JFEL-SP3-DIA-BPM-01.yaml  JFEL-SP3-DIA-BPM-02.yaml  JFEL-VBC-DIA-BPM-01.yaml
JFEL/YAML/Diagnostic/Bunch_Length_Monitor/: JFEL-S07-DIA-CDR-01.yaml
JFEL/YAML/Diagnostic/Camera/: JFEL-S01-DIA-CAM-01.yaml  JFEL-S02-DIA-CAM-01.yaml  JFEL-S02-DIA-CAM-02.yaml  JFEL-S02-DIA-CAM-03.yaml  JFEL-S03-DIA-CAM-01.yaml  JFEL-S04-DIA-CAM-01.yaml  JFEL-S04-DIA-CAM-02.yaml  (+27 more)
(+322 files in other folders)
