[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laura-lattices"
version = "1.0.0"
description = "Lattice data files for the LAURA accelerator modelling framework"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name = "James Jones", email = "james.jones@stfc.ac.uk"},
    {name = "Alex Brynes", email = "alexander.brynes@stfc.ac.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.setuptools]
packages = [
    "laura_lattices",
    "laura_lattices.JFEL",
]

[tool.setuptools.package-dir]
"laura_lattices" = "."
"laura_lattices.JFEL" = "JFEL"

[tool.setuptools.package-data]
"*" = [
    "**/*.yaml", "**/*.json", "**/*.hdf5", "**/*.gdf",
    "**/*.txt", "**/*.csv", "**/*.sdds", "**/*.dat",
    "**/*.opal", "**/*.astra", "**/*.T7", "**/*.def",
]
